# campusil

./: CampusIL.pyproj  CampusIL.slnx  pyproject.toml  requirements.txt
.venv_test/: pyvenv.cfg
.venv_test/Scripts/: activate  activate.bat
src/CampusIL/: CampusIL.py  __init__.py  func_families.py  utils.py
src/CampusIL.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
