[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CampusIL"
version = "0.1.0"
authors = [
  { name="Gad Lidror", email="gady.lidror@gmail.com" }
]
description = "Pre-requisites code for campus.gov.il deep learning course, by the ministry of education, Israel"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [numpy, pandas, matplotlib, scikit-learn
]

[project.urls]
Homepage = "https://github.com/gadlidror/CampusIL"