[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "CampusIL"
version = "0.2.1"
authors = [
  { name="Gad Lidror", email="gady.lidror@gmail.com" }
]
description = "Pre-requisites code for campus.gov.il deep learning course, by the ministry of education, Israel"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", 
				"pandas", 
				"matplotlib"
]

[project.urls]
Homepage = "https://github.com/gadlidror/CampusIL"